# braser

./: .gitignore  Cargo.toml  DRAFT.md  README.md  readme_template.md  test.wasm
.bin/: build.sh  compress.sh  coverage.sh  e2e.sh  package-lock.json  package.json  webpack.config.js
src/: lib.rs  main.rs
src/compiler/: mod.rs
src/decode/: mod.rs
src/decode/compiler/: mod.rs
src/decode/lexer/: mod.rs
src/decode/lexer/error/: mod.rs
src/decode/lexer/helpers/: mod.rs
src/decode/lexer/tokens/: mod.rs
src/decode/parser/: mod.rs
src/decode/parser/error/: mod.rs
src/decode/tests/: mod.rs
src/decode/tests/lexer/: mod.rs
src/decode/tests/parser/: mod.rs
src/encode/: mod.rs
src/grammar/: node.pest
src/lexer/: mod.rs
src/lexer/helpers/: mod.rs
src/parser/: mod.rs
src/parser/errors/: mod.rs
src/shared/: mod.rs  tokens.rs
src/tests/: mod.rs
src/tests/compiler/: mod.rs
src/tests/e2e/: mod.rs
src/tests/lexer/: mod.rs
src/tests/parser/: mod.rs
tests/: web.rs
