[package]
name = "braser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
num = "0.4"
lazy_static = "1.4.0"
js-sys = "0.3.52"
regex = "1.9.3"
[dev-dependencies]
pretty_assertions = "1"
wasm-bindgen-test = "0.3.0"
